[package]
name = "permanode-common"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"

[lib]
name = "permanode_common"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronicle = { git = "https://github.com/iotaledger/chronicle.rs.git", branch = "framework"}
scylla = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "scylla" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.6.4"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4.14"
url = { version = "2.2.1", features = ["serde"] }
rand = "0.8.3"
futures = "0.3.13"
prometheus = "0.11.0"
lazy_static = "1.4.0"
tokio = "1.2"
glob = "0.3"

[dependencies.paho-mqtt]
version = "0.9.1"
default-features = false
features = [
    "bundled"
]

[dev-dependencies]
maplit = "1.0.2"
url = { version = "2", features = ["serde"] }