[package]
name = "permanode-storage"
version = "0.1.0"
authors = ["Alex Coats <alexandcoats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "rework-access-traits" }
scylla-cql = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "rework-access-traits" }
bee-tangle = { git = "https://github.com/iotaledger/bee.git", branch = "chrysalis-pt-2"}
bee-ledger = { git = "https://github.com/iotaledger/bee.git", branch = "chrysalis-pt-2"}
bee-snapshot = { git = "https://github.com/iotaledger/bee.git", branch = "chrysalis-pt-2"}
async-trait = "0.1.42"

[dependencies.bee-message]
git = "https://github.com/iotaledger/bee.git"
branch = "chrysalis-pt-2"
features = [
    "serde"
]