[package]
name = "permanode-storage"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"

[lib]
name = "permanode_storage"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permanode-common = { path = "../permanode-common" }
scylla = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "error-handling" }
scylla-cql = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "error-handling" }
bee-tangle = { git = "https://github.com/iotaledger/bee.git", rev = "2825bf5" }
bee-ledger = { git = "https://github.com/iotaledger/bee.git", rev = "2825bf5" }
bee-snapshot = { git = "https://github.com/iotaledger/bee.git", rev = "2825bf5" }
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
async-trait = "0.1.42"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.2"
rand = "0.8.2"
anyhow = "1.0"

[dependencies.bee-message]
git = "https://github.com/iotaledger/bee.git"
rev = "2825bf5"
features = [
    "serde"
]

[dependencies.tokio]
version = "1.2"
default-features = false
features = [
    "io-std",
    "fs",
    "macros",
    "sync",
    "net",
    "io-util",
    "time",
    "rt-multi-thread",
    "signal",
    "full"
]
