[package]
name = "permanode"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"
license = "APACHE 2.0"
homepage = "https://docs.iota.org/docs/chronicle/1.1/overview"
repository = "https://github.com/iotaledger/scylla.rs"

[dependencies]
chronicle = { git = "https://github.com/iotaledger/chronicle.rs.git", branch = "framework"}
scylla = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "scylla" }
scylla-cql = { git = "https://github.com/iotaledger/scylla.rs.git", branch = "scylla" }
bee-message = { git = "https://github.com/iotaledger/bee.git", branch = "chrysalis-pt-2"}
permanode-api = { path = "../permanode-api" }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.42"
env_logger = "0.8.3"
log = "0.4.14"

[dependencies.tokio]
version = "1.0"
default-features = false
features = [
    "io-std",
    "fs", 
    "macros", 
    "sync", 
    "net", 
    "io-util", 
    "time", 
    "rt-multi-thread",
    "signal", 
    "full"
] 
