[package]
name = "permanode-mongo"
version = "0.1.0"
edition = "2021"

[dependencies]

backstage = { git = "https://github.com/iotaledger/backstage.git", branch = "stable", features = ["prefabs"] }
chronicle-broker = { path = "../../chronicle-broker", features = ["application"] }
mongodb = { version = "2.1" }
chronicle-common = { path = "../../chronicle-common", features = ["mongo"] }
async-trait = { version = "0.1" }
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
